cabal-version:      >=1.10
name:               cli-git
version:            0.1.0.2
license:            BSD3
license-file:       LICENSE
copyright:          Obsidian Systems LLC 2020
maintainer:         maintainer@obsidian.systems
author:             Obsidian Systems LLC
synopsis:           Bindings to the git command-line interface
category:           Git, Bindings
build-type:         Simple
extra-source-files: CHANGELOG.md
                    README.md

tested-with: GHC ==8.6.5 || ==8.8.4

library
  exposed-modules:  Bindings.Cli.Git
  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
      base            
    , cli-extras      
    , containers      
    , data-default    
    , exceptions      
    , lens            
    , logging-effect  
    , megaparsec      
    , mtl             
    , text  
    , which

source-repository head
  type:     git
  location: https://github.com/obsidiansystems/cli-git
